<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicine_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/medicine_list_fragment_label" />
        <item
            android:id="@+id/nav_refills"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/refills_fragment_label" />
        <item
            android:id="@+id/nav_add_medicine"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_medicine_fragment_label" />
        <item
            android:id="@+id/nav_alert_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/alerts_list_fragment_label" />
    </group>

</menu>
